Add configurable PWA push notifications
